[FIX]: Increased z-index in autocomplete styling to ensure the suggest placeholder appears [SBK-8] (https://digital-projects.atlassian.net/browse/SBK-8)

--- a/src/Resources/app/storefront/src/scss/component/_e-header-search-form.scss
+++ b/src/Resources/app/storefront/src/scss/component/_e-header-search-form.scss
@@ -1,7 +1,7 @@
 .e-header-search-form {
 	.e-autocomplete {
 		position: absolute;
-		z-index: 4;
+		z-index: 50;
 
 		// In accordance with the default shopware .form-control styles
 		bottom: $input-border-width;
